fix: dark mode scroll bar

--- a/styles/index.css
+++ b/styles/index.css
@@ -9,3 +9,10 @@
 body {
   -webkit-font-smoothing: antialiased;
 }
+
+/* Make scroll bars in preview mode dark */
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+}
